[package]
name = "tcap"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
async-std = "1.12.0"
rand = "0.8.5"
cidr = "0.2.2"
bytemuck = { version = "1.13.1", features = [ "derive" ] }
serde = "1.0.188"
log = "0.4.20"
simple_logger = "4.2.0"
clap = { version = "4.4.7", features = ["derive"] }

[features]
directCPcommunication = []
net-stats = []
default = [ "directCPcommunication", "net-stats"]